# json_codec

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/scripts/: release.py
.github/workflows/: publish.yml
json_codec/: __init__.py  json_codec.py  test_json_codec.py  types.py  utils.py
json_codec/codecs/: date_codec.py  datetime_codec.py  dict_codec.py  list_codec.py  primitive_codec.py  set_codec.py  time_codec.py  tuple_codec.py  union_codec.py
